# MetaLearnPlasticity

./: .gitignore  LICENSE  Makefile  README.md  inputs.py  l1_regularized_loss.py  main.py  network.py  plasticity.py  play.py  pyproject.toml  refactor-main.py  requirements.txt  setup.py  synapse.py  test_inputs.py  utils.py
cosyne/: base.py  l1_regularized_loss.py  main.py  noisy_trace.py  sparsify_trace.py  utils.py
experiments/: backprop_winit.py  behavior_fit.py  diff_winit.py  l1_reg.py  multilayer.py  r2_trainer.py
explogs/: benchmark-data.csv  trajectory.csv
exps/: alpha1_compartment.py  backprop.py  backprop_winit.py  behavior_fit.py  confavreux_paper.py  devlop.py  diff_winit.py  mbalpha1_connectome.py  mlp_plasticity.py  ojas_rule.py  parameters_trajectory.py  r2_train.py  sparse_encoding_input.py  toy_network.py
plasticity/: __init__.py  data_loader.py  inputs.py  losses.py  main.py  model.py  network.py  run.py  synapse.py  train.py  trainer.py  utils.py  version_info.py
playground/: Alpha1-compartment.ipynb  DAN_inputome.ipynb  benchmarking.py  example-aggregate.py  jax_fun.ipynb  lax_aggregate.py  playbook.py  timesteps.py
plotters/: losses_mat.npy  losses_mat50.npy  mb_visualization.ipynb
scripts/: cluster_exps.sh  cluster_scheduler.sh  diff_init_diff_x.sh  ith_order.sh  nn_architecture_exps.sh  noisy_measurements_exps.sh  regularizer_exps.sh  scalability_ml_plasticity.sh  sparsity_exps.sh  tester.sh  tester_cpu.sh  tester_gpu.sh
tests/: test_data_loader.py  test_gradients.py  test_inputs.py  test_model.py  test_synapse.py  test_utils.py  (+1 more)
(+52 files in other folders)
