[tool.poetry]
name = "plasticity"
version = "0.1.0"
description = "fitting synaptic plasticity rules"
authors = ["xxx <xxx@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
optax = "^0.1.5"
tqdm = "^4.65.0"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
psutil = "^5.9.5"
imageio = "^2.31.1"
omegaconf = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
